--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -88,7 +88,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextUpkeepDate"
  	 	 	 	],
- 	 	 	 	"trans": "تاريخ الصيانة التالي: {0}",
+ 	 	 	 	"trans": "تاريخ الصيانة التالي: ${nextUpkeepDate}",
  	 	 	 	"eng": "Next upkeep Date: ${nextUpkeepDate}"
  	 	 	},
  	 	 	"insufficientError": {
@@ -305,7 +305,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerName"
  	 	 	 	],
- 	 	 	 	"trans": "الرد على {0}",
+ 	 	 	 	"trans": "الرد على ${playerName}",
  	 	 	 	"eng": "Replying to ${playerName}"
  	 	 	},
  	 	 	"linksNotAllowed": {
@@ -328,7 +328,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"minLevel"
  	 	 	 	],
- 	 	 	 	"trans": "يجب أن تكون على الأقل مستوى {0} لإرسال رسائل الدردشة",
+ 	 	 	 	"trans": "يجب أن تكون على الأقل مستوى ${minLevel} لإرسال رسائل الدردشة",
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
@@ -484,7 +484,7 @@
  	 	 	 	"eng": "Friend List"
  	 	 	},
  	 	 	"leaderBoard": {
- 	 	 	 	"trans": "Leader Board",
+ 	 	 	 	"trans": "ليدربورد",
  	 	 	 	"eng": "Leaderboard"
  	 	 	},
  	 	 	"tutorial": {
@@ -657,7 +657,7 @@
  	 	 	 	"eng": "Your level is too low for this item"
  	 	 	},
  	 	 	"unequip": {
- 	 	 	 	"trans": "unquip",
+ 	 	 	 	"trans": "عدم تجهسز",
  	 	 	 	"eng": "Unequip"
  	 	 	},
  	 	 	"use": {
@@ -821,7 +821,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"skipCount"
  	 	 	 	],
- 	 	 	 	"trans": "تخطي {0}",
+ 	 	 	 	"trans": "تخطي ${skipCount}",
  	 	 	 	"eng": "Skipping ${skipCount}"
  	 	 	},
  	 	 	"skipAvailable": {
@@ -1307,7 +1307,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"timeStr"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "هذا سوف يستغرق {0}",
+ 	 	 	 	 	"trans": "هذا سوف يستغرق ${timeStr}",
  	 	 	 	 	"eng": "This will take ${timeStr}"
  	 	 	 	}
  	 	 	}
@@ -1439,7 +1439,7 @@
  	 	"logout": {
  	 	 	"cancelAfkConfirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "إلغاء AFK و LogOUT؟",
+ 	 	 	 	 	"trans": "إلغاء AFK و اخرج؟",
  	 	 	 	 	"eng": "Cancel Afk and logout?"
  	 	 	 	},
  	 	 	 	"description": {
@@ -1473,7 +1473,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "إلغاء حظر {0}",
+ 	 	 	 	 	"trans": "إلغاء حظر ${playerName}",
  	 	 	 	 	"eng": "Unblock ${playerName}"
  	 	 	 	}
  	 	 	}
@@ -1558,7 +1558,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "Are you sure you want to kick this player from your gang?",
+ 	 	 	 	"trans": "هل متاكد ان تضرد هذا الشخص من عصابتك؟",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
  	 	 	},
  	 	 	"memberContribution": {
@@ -1566,7 +1566,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"resourceContribution"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "مورد {0}",
+ 	 	 	 	 	"trans": "مورد ${resourceContribution}",
  	 	 	 	 	"eng": "${resourceContribution} Resource"
  	 	 	 	},
  	 	 	 	"occupation": {
@@ -1580,7 +1580,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"moneyContribution"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "{0} التمويل",
+ 	 	 	 	 	"trans": "${moneyContribution} التمويل",
  	 	 	 	 	"eng": "${moneyContribution} funding"
  	 	 	 	},
  	 	 	 	"exp": {
@@ -1643,7 +1643,7 @@
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
- 	 	 	 	 	"trans": "في وقت لاحق",
+ 	 	 	 	 	"trans": "لاحق",
  	 	 	 	 	"eng": "Later"
  	 	 	 	},
  	 	 	 	"confirm": {
@@ -1775,7 +1775,7 @@
  	 	 	 	 	"eng": "You cannot change this in the future"
  	 	 	 	},
  	 	 	 	"confirmButton": {
- 	 	 	 	 	"trans": "أنا واثق من",
+ 	 	 	 	 	"trans": "أنا واثق",
  	 	 	 	 	"eng": "I am sure"
  	 	 	 	}
  	 	 	}
@@ -1942,11 +1942,11 @@
  	 	 	 	"eng": "Cyberpunk Text-based MMORPG"
  	 	 	},
  	 	 	"description1": {
- 	 	 	 	"trans": "CyberCode Online is an online game. An account is needed to store game data.",
+ 	 	 	 	"trans": "سيبر كود هو لعبه انترنت، يجب حساب لتخزين بيانات اللعبه",
  	 	 	 	"eng": "CyberCode Online is an online game, an account is needed to store game data."
  	 	 	},
  	 	 	"description2": {
- 	 	 	 	"trans": "Please register or login with existing account",
+ 	 	 	 	"trans": "يرجى تسجيل او التخول بحساب موجود,
  	 	 	 	"eng": "please register or login with existing account"
  	 	 	},
  	 	 	"asusDescription": {
@@ -1967,7 +1967,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "ينتهي في {0}",
+ 	 	 	 	"trans": "ينتهي في ${date}",
  	 	 	 	"eng": "Expires in ${date}"
  	 	 	},
  	 	 	"empty": {
@@ -2068,7 +2068,7 @@
  	 	},
  	 	"register": {
  	 	 	"registerButton": {
- 	 	 	 	"trans": "Register",
+ 	 	 	 	"trans": تسجيل حساب",
  	 	 	 	"eng": "Create Account"
  	 	 	},
  	 	 	"loginPageButton": {
@@ -2114,7 +2114,7 @@
  	 	 	"deleteAccount": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Are you sure you want to delete your account? This is irreversible and all account information will be removed.",
+ 	 	 	 	 	 	"trans": "هل متاكد ان تمسح حسابك؟ لا يمكن العوده، كل بيانات الحساب سوف يتم المسح",
  	 	 	 	 	 	"eng": "Are you sure you want to delete your account? This is irreversible, all account information will be removed."
  	 	 	 	 	}
  	 	 	 	}
