market shortcut and grammatical revisions

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} bitcoin saranno depositati nell'account della tua Gang, quest'azione non può essere annullata",
+ 	 	 	 	 	"trans": "${amount} bitcoin saranno depositati nell'account della tua gang, quest'azione non può essere annullata",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -49,7 +49,7 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Per favore inserisci il motto della tua Gang",
+ 	 	 	 	 	 	"trans": "Inserisci il motto della tua Gang",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
@@ -105,7 +105,7 @@
  	 	 	},
  	 	 	"occupation": {
  	 	 	 	"noClan": {
- 	 	 	 	 	"trans": "Nessuna Gang ha ancora occupato questa zona",
+ 	 	 	 	 	"trans": "Nessuna gang ha ancora occupato questa zona",
  	 	 	 	 	"eng": "No gang has occupied this area yet"
  	 	 	 	}
  	 	 	},
@@ -120,7 +120,7 @@
  	 	 	 	"eng": "Community Content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Questo contenuto verrà aggiornato dalla Comunità. Clicca qui per contribuire con i tuoi contenuti.",
+ 	 	 	 	"trans": "Questo contenuto è creato dalla comunità. Clicca qui per contribuire con i tuoi contenuti.",
  	 	 	 	"eng": "This content is contributed by the community. click here to contribute your own content."
  	 	 	}
  	 	},
@@ -160,7 +160,7 @@
  	 	 	 	 	 	"eng": "Decryption failed"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Fare clic sulla sequenza di colore corretta per sbloccare",
+ 	 	 	 	 	 	"trans": "Fare clic sulla sequenza di colori corretta per sbloccare",
  	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
  	 	 	 	 	},
  	 	 	 	 	"button": {
@@ -219,7 +219,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "AGGIORNA A ${upgradeToSlot} SLOT",
+ 	 	 	 	"trans": "ESPANDI A ${upgradeToSlot} SLOT",
  	 	 	 	"eng": "UPGRADE TO ${upgradeToSlot} SLOTS"
  	 	 	},
  	 	 	"upgradeSlotDesc": {
@@ -256,19 +256,19 @@
  	 	 	"attackButton": {
  	 	 	 	"primary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Arma Primaria",
+ 	 	 	 	 	 	"trans": "Primaria",
  	 	 	 	 	 	"eng": "primary"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"secondary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Arma Speciale",
+ 	 	 	 	 	 	"trans": "Speciale",
  	 	 	 	 	 	"eng": "special"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"tertiary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Distruttore.",
+ 	 	 	 	 	 	"trans": "Distruttrice",
  	 	 	 	 	 	"eng": "Destruct."
  	 	 	 	 	}
  	 	 	 	}
@@ -276,7 +276,7 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "Hai trovato una vecchia cassetta di sicurezza bloccata, sembra che ci sia un post-it attaccato con qualche messaggio.",
+ 	 	 	 	"trans": "Hai trovato una vecchia cassetta di sicurezza bloccata, sembra che ci sia un post-it attaccato con del testo scritto.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
@@ -288,7 +288,7 @@
  	 	 	 	"eng": "Pin Code"
  	 	 	},
  	 	 	"inputPlaceholder": {
- 	 	 	 	"trans": "Inserisci il codice PIN",
+ 	 	 	 	"trans": "Inserire il codice PIN",
  	 	 	 	"eng": "Enter pin code"
  	 	 	}
  	 	},
@@ -309,15 +309,15 @@
  	 	 	 	"eng": "Replying to ${playerName}"
  	 	 	},
  	 	 	"linksNotAllowed": {
- 	 	 	 	"trans": "I link non sono ammessi in chat",
+ 	 	 	 	"trans": "I link non sono ammessi",
  	 	 	 	"eng": "Links are not allowed"
  	 	 	},
  	 	 	"spamBlock": {
- 	 	 	 	"trans": "Si prega di non inviare un messaggio senza senso, gli spammer saranno silenziati.",
+ 	 	 	 	"trans": "Si prega di non inviare messaggi insensati, gli spammer saranno silenziati.",
  	 	 	 	"eng": "Please do not send meaningless message, spams will be muted."
  	 	 	},
  	 	 	"repeatBlock": {
- 	 	 	 	"trans": "Si prega di non inviare ripetutamente lo stesso messaggio, gli spammer saranno silenziati.",
+ 	 	 	 	"trans": "Si prega di non inviare ripetutamente messaggi, gli spammer saranno silenziati.",
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
@@ -332,19 +332,19 @@
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
- 	 	 	 	"trans": "Chat",
+ 	 	 	 	"trans": "chat",
  	 	 	 	"eng": "chat"
  	 	 	},
  	 	 	"gang": {
- 	 	 	 	"trans": "Gang",
+ 	 	 	 	"trans": "gang",
  	 	 	 	"eng": "gang"
  	 	 	},
  	 	 	"mail": {
- 	 	 	 	"trans": "Mail",
+ 	 	 	 	"trans": "mail",
  	 	 	 	"eng": "mail"
  	 	 	},
  	 	 	"noti": {
- 	 	 	 	"trans": "Notifiche",
+ 	 	 	 	"trans": "notifiche",
  	 	 	 	"eng": "noti."
  	 	 	}
  	 	},
@@ -379,7 +379,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "La chat della gang sarà abilitata quando apparterrai a una gang. \\n unisciti a una gang facendo amicizia nella chat globale o crea la tua banda e invita i tuoi amici!",
+ 	 	 	 	 	"trans": "La chat della gang sarà abilitata quando apparterrai a una gang. \\n Unisciti a una gang facendo amicizia nella chat globale o crea la tua banda e invita i tuoi amici!",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
@@ -451,7 +451,7 @@
  	 	"quickSlot": {
  	 	 	"unbindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Modifica slot rapido?",
+ 	 	 	 	 	"trans": "Rimuovere lo slot rapido?",
  	 	 	 	 	"eng": "Unbind quick slot?"
  	 	 	 	}
  	 	 	},
@@ -507,7 +507,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Lo Skip Globale consente di saltare il tempo di attesa AFK e terminare l'attività immediatamente. \r\n     Questo effetto sarà applicato a tutti i giocatori che eseguono attività in AFK",
+ 	 	 	 	 	"trans": "Lo Skip Globale consente di saltare il tempo di attesa e terminare l'attività immediatamente. \r\n     Questo effetto sarà applicato a tutti i giocatori che eseguono attività in AFK",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -530,7 +530,7 @@
  	 	 	},
  	 	 	"confirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Confermi di usare lo Skip?",
+ 	 	 	 	 	"trans": "Confermi di voler usare lo Skip?",
  	 	 	 	 	"eng": "Confirm use skip?"
  	 	 	 	},
  	 	 	 	"subtitle": {
@@ -1075,7 +1075,7 @@
  	 	 	},
  	 	 	"marketShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Ragazzi",
+ 	 	 	 	 	"trans": "Mercato",
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
