--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -611,7 +611,7 @@
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Apri la lore di questo oggetto",
+ 	 	 	 	 	"trans": "Apri la lore di comunità di questo oggetto",
  	 	 	 	 	"eng": "Open the community lore for this item"
  	 	 	 	}
  	 	 	},
@@ -633,19 +633,19 @@
  	 	 	 	 	"eng": "Malfunctioned"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "Questo oggetto è rotto, portalo al Fabbricatore di Armi per la riparazione",
+ 	 	 	 	 	"trans": "Questo oggetto è rotto, portalo al Fabbricatore d'Armi per la riparazione",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
  	 	 	"upgradeModuleTitle": {
- 	 	 	 	"trans": "Migliora Slot ${index}",
+ 	 	 	 	"trans": "slot di miglioramento ${index}",
  	 	 	 	"eng": "upgrade slot ${index}",
  	 	 	 	"vars": [
  	 	 	 	 	"index"
  	 	 	 	]
  	 	 	},
  	 	 	"areaEffect": {
- 	 	 	 	"trans": "[AoE] Area di effetto, l'effetto di questo oggetto si applicherà anche agli alleati che combattono con te.",
+ 	 	 	 	"trans": "[AoE] Area d'effetto, l'effetto di questo oggetto si applicherà anche agli alleati che combattono con te.",
  	 	 	 	"eng": "[AOE] Area of Effect, the effect of this item will apply allies in combat with you."
  	 	 	},
  	 	 	"equip": {
@@ -673,7 +673,7 @@
  	 	 	 	"eng": "Lock"
  	 	 	},
  	 	 	"lockDescription": {
- 	 	 	 	"trans": "Impedisce la vendita accidentale o la distruzione",
+ 	 	 	 	"trans": "Impedisce la vendita o distruzione accidentale",
  	 	 	 	"eng": "Prevents accidental selling or destroying"
  	 	 	},
  	 	 	"cantPrintWhileInCombat": {
@@ -688,7 +688,7 @@
  	 	 	 	"eng": "Print Cache"
  	 	 	},
  	 	 	"printCacheDescription": {
- 	 	 	 	"trans": "Trasforma questa cache in un'arma o in un oggetto dell'attrezzatura che puoi usare.",
+ 	 	 	 	"trans": "Trasforma questa cache in un'arma o in un'attrezzatura che puoi usare.",
  	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can use."
  	 	 	},
  	 	 	"openContainer": {
@@ -716,19 +716,19 @@
  	 	 	},
  	 	 	"factoryReset": {
  	 	 	 	"confirmation": {
- 	 	 	 	 	"trans": "Questo ripristinerà tutta la calibrazione sul tuo oggetto. Lo renderà anche nuovamente scambiabile. \r\n       Sei sicuro di voler procedere?",
+ 	 	 	 	 	"trans": "Questo ripristinerà la calibrazione sul tuo oggetto. Inoltre lo renderà nuovamente scambiabile. \r\n       Sei sicuro di voler procedere?",
  	 	 	 	 	"eng": "Doing this will reset all calibration on your item. It will also make it tradable again. \r\n      Are you sure you want to proceed?"
  	 	 	 	},
- 	 	 	 	"trans": "Reset",
+ 	 	 	 	"trans": "Reset di fabbrica",
  	 	 	 	"eng": "Factory Reset"
  	 	 	},
  	 	 	"noItem": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Non hai più questo articolo",
+ 	 	 	 	 	"trans": "Non possiedi più quest'oggetto",
  	 	 	 	 	"eng": "You no longer have this item"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Premi di nuovo per tornare all'inventario",
+ 	 	 	 	 	"trans": "Premi indietro per tornare all'inventario",
  	 	 	 	 	"eng": "press back to go back to inventory"
  	 	 	 	}
  	 	 	}
@@ -743,7 +743,7 @@
  	 	 	 	"eng": "You don't have any secret keys"
  	 	 	},
  	 	 	"noKeysSubtitle": {
- 	 	 	 	"trans": "Puoi ottenere chiavi segrete dai dungeon",
+ 	 	 	 	"trans": "Puoi ottenere le chiavi segrete dai dungeon",
  	 	 	 	"eng": "You can obtain secret keys from Dungeons"
  	 	 	}
  	 	},
@@ -800,11 +800,11 @@
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"level"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "Livello di stampa equipaggiamenti ${level}",
+ 	 	 	 	 	 	"trans": "Stampa equipaggiamento di livello ${level}",
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "La stampa delle attrezzature è basata sul tuo rank di stampa, aumentalo stampando più elementi",
+ 	 	 	 	 	 	"trans": "La stampa delle attrezzature è basata sul tuo rango di stampa, aumentalo stampando più elementi",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -839,7 +839,7 @@
  	 	 	 	"eng": "title"
  	 	 	},
  	 	 	"gearScore": {
- 	 	 	 	"trans": "Punteggio equipaggiamento",
+ 	 	 	 	"trans": "Livello equipaggiamento",
  	 	 	 	"eng": "Gear Score"
  	 	 	},
  	 	 	"location": {
@@ -847,15 +847,15 @@
  	 	 	 	"eng": "location"
  	 	 	},
  	 	 	"onlineStatus": {
- 	 	 	 	"trans": "stato Giocatore",
+ 	 	 	 	"trans": "Stato",
  	 	 	 	"eng": "system link"
  	 	 	},
  	 	 	"streetCred": {
- 	 	 	 	"trans": "Reputazione in strada",
+ 	 	 	 	"trans": "Reputazione",
  	 	 	 	"eng": "Street Cred"
  	 	 	},
  	 	 	"status": {
- 	 	 	 	"trans": "Stato",
+ 	 	 	 	"trans": "Locazione",
  	 	 	 	"eng": "Status"
  	 	 	},
  	 	 	"bio": {
@@ -863,7 +863,7 @@
  	 	 	 	"eng": "Bio"
  	 	 	},
  	 	 	"bioNotFound": {
- 	 	 	 	"trans": "CORRETTO",
+ 	 	 	 	"trans": "REDATTO",
  	 	 	 	"eng": "REDACTED"
  	 	 	},
  	 	 	"decoration1": {
@@ -871,7 +871,7 @@
  	 	 	 	"eng": "confidential"
  	 	 	},
  	 	 	"decoration2": {
- 	 	 	 	"trans": "Proprietà dell' SLPD",
+ 	 	 	 	"trans": "Proprietà dell'SLPD",
  	 	 	 	"eng": "Property of SLPD"
  	 	 	},
  	 	 	"accountCreated": {
@@ -899,7 +899,7 @@
  	 	 	 	 	"eng": "Permissions"
  	 	 	 	},
  	 	 	 	"transferLeadership": {
- 	 	 	 	 	"trans": "Trasferisci la leadership",
+ 	 	 	 	 	"trans": "Trasferisci il comando",
  	 	 	 	 	"eng": "Transfer Leadership"
  	 	 	 	}
  	 	 	},
@@ -909,7 +909,7 @@
  	 	 	 	 	"eng": "Player Actions"
  	 	 	 	},
  	 	 	 	"sendPrivateMsg": {
- 	 	 	 	 	"trans": "Invia messaggio privato",
+ 	 	 	 	 	"trans": "Invia un messaggio in privato",
  	 	 	 	 	"eng": "Send private message"
  	 	 	 	},
  	 	 	 	"sendGift": {
@@ -929,7 +929,7 @@
  	 	 	 	 	"eng": "Remove from Friend List"
  	 	 	 	},
  	 	 	 	"giveStreetCred": {
- 	 	 	 	 	"trans": "Dai reputazione di strada",
+ 	 	 	 	 	"trans": "Dai reputazione",
  	 	 	 	 	"eng": "Give Street Cred"
  	 	 	 	},
  	 	 	 	"report": {
@@ -992,7 +992,7 @@
  	 	},
  	 	"market": {
  	 	 	"lookAround": {
- 	 	 	 	"trans": "Guardati in giro",
+ 	 	 	 	"trans": "Guarda in giro",
  	 	 	 	"eng": "Look around"
  	 	 	},
  	 	 	"myStall": {
@@ -1010,11 +1010,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextSlotSize"
  	 	 	 	],
- 	 	 	 	"trans": "Usa Bitcoin per aumentare il numero di oggetti che puoi inserire nella tua bancarella contemporaneamente",
+ 	 	 	 	"trans": "Spendi Bitcoin per aumentare il numero di oggetti che puoi mettere nella tua bancarella contemporaneamente",
  	 	 	 	"eng": "Spend Bitcoins to increase how many items you can put in your stall at the same time"
  	 	 	},
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "Devi essere almeno al livello 4 per accedere al mercato",
+ 	 	 	 	"trans": "Devi essere almeno di livello 4 per poter accedere al mercato",
  	 	 	 	"eng": "You need to be at least level 4 to access the market"
  	 	 	},
  	 	 	"levelSelect": {
@@ -1030,7 +1030,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noItems": {
- 	 	 	 	"trans": "Al momento, non ci sono articoli in vendita per questa categoria",
+ 	 	 	 	"trans": "Al momento non ci sono articoli in vendita per questa categoria",
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
@@ -1054,7 +1054,7 @@
  	 	},
  	 	"afkTask": {
  	 	 	"newbieTip": {
- 	 	 	 	"trans": "L'attività scelta continuerà anche se chiudi il gioco",
+ 	 	 	 	"trans": "L'attività continuerà anche se chiudi il gioco",
  	 	 	 	"eng": "The task will continue even if you close the game"
  	 	 	},
  	 	 	"syncing": {
@@ -1062,7 +1062,7 @@
  	 	 	 	"eng": "Syncing"
  	 	 	},
  	 	 	"incompleteError": {
- 	 	 	 	"trans": "Assicurati che il tempo del tuo dispositivo sia corretto.",
+ 	 	 	 	"trans": "Assicurati che data e ora del tuo dispositivo siano corretti.",
  	 	 	 	"eng": "Please ensure your device time is correct."
  	 	 	},
  	 	 	"manualRefresh": {
