--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -49,7 +49,7 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Entre le slogan de ton gang",
+ 	 	 	 	 	 	"trans": "Entre la devise de ton gang",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Les habitants de l'Ukraine, de la Russie et du monde entier souffrent a cause de l'ambition d'un homme. \n Faites l'amour, pas la guerre.",
+ 	 	 	 	"trans": "Les habitants de l'Ukraine, de la Russie et du monde entier souffrent à cause de l'ambition d'un homme. \n Faites l'amour, pas la guerre.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -379,7 +379,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Le chat gang sera activé lorsque vous appartenez à un gang. \\ njoin a gang en se faisant des amis dans le chat mondial ou créez votre propre gang et invitez vos amis!",
+ 	 	 	 	 	"trans": "Le chat de gang sera activé lorsque vous appartiendrez à un gang.\\nRejoignez un gang en vous faisant des amis dans le chat mondial ou créez votre propre gang et invitez vos amis!",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
@@ -5440,7 +5440,7 @@
  	},
  	"chatServer": {
  	 	"restarting": {
- 	 	 	"trans": "Le serveur de chat redémarre pour une mise à jour ...",
+ 	 	 	"trans": "Le serveur de tchat redémarre pour une mise à jour ...",
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
@@ -5811,7 +5811,7 @@
  	 	 	 	"likerName",
  	 	 	 	"amount"
  	 	 	],
- 	 	 	"trans": "${likerName} t'as envoyé ${amount} respects pour ton 'Skip'",
+ 	 	 	"trans": "${likerName} t'a envoyé ${amount} respects pour ton 'Skip'",
  	 	 	"eng": "${likerName} has send you ${amount} respects for your skip"
  	 	}
  	},
@@ -5845,7 +5845,7 @@
  	 	 	 	 	"totalPrice",
  	 	 	 	 	"CURRENCY"
  	 	 	 	],
- 	 	 	 	"trans": "Prix total: ${totalPrice} ${CURRENCY}",
+ 	 	 	 	"trans": "Prix total : ${totalPrice} ${CURRENCY}",
  	 	 	 	"eng": "Total price: ${totalPrice} ${CURRENCY}"
  	 	 	}
  	 	}
@@ -5931,7 +5931,7 @@
  	 	 	},
  	 	 	"agreeToggle": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Je comprends et je n'enverrai jamais de spam ni n'enfreindrai aucune des règles du chat",
+ 	 	 	 	 	"trans": "Je comprends et je n'enverrai jamais de spam ni n'enfreindrai aucune des règles du tchat",
  	 	 	 	 	"eng": "I understand and I will never spam or break any of the chat rules"
  	 	 	 	}
  	 	 	},
@@ -5941,7 +5941,7 @@
  	 	 	},
  	 	 	"confirmButton": {
  	 	 	 	"agreed": {
- 	 	 	 	 	"trans": "Je ne spamme pas",
+ 	 	 	 	 	"trans": "Je ne spammerai pas",
  	 	 	 	 	"eng": "I won't spam"
  	 	 	 	},
  	 	 	 	"notAgree": {
@@ -6056,7 +6056,7 @@
  	 	 	 	 	"from",
  	 	 	 	 	"to"
  	 	 	 	],
- 	 	 	 	"trans": "${from} ==> ${to}",
+ 	 	 	 	"trans": "${from} => ${to}",
  	 	 	 	"eng": "${from} => ${to}"
  	 	 	}
  	 	},
@@ -6146,11 +6146,11 @@
  	 	},
  	 	"gangShortNameInput": {
  	 	 	"title": {
- 	 	 	 	"trans": "Jour de gang",
+ 	 	 	 	"trans": "Diminutif du gang",
  	 	 	 	"eng": "Gang Tag"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Une courte balise qui sera affichée dans le chat",
+ 	 	 	 	"trans": "Un diminutif qui sera affiché dans le tchat",
  	 	 	 	"eng": "A short tag that will be displayed in chat"
  	 	 	}
  	 	},
@@ -6160,7 +6160,7 @@
  	 	},
  	 	"error": {
  	 	 	"noNameOrShortName": {
- 	 	 	 	"trans": "Veuillez saisir un nom et une balise",
+ 	 	 	 	"trans": "Veuillez saisir un nom et un diminutif",
  	 	 	 	"eng": "Please enter a name and a tag"
  	 	 	}
  	 	}
@@ -6185,7 +6185,7 @@
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "Pendant Halloween, un niveau de don de chat cyber-bat Time Limited sera disponible!",
+ 	 	 	"trans": "Pendant Halloween, un niveau de don de tchat 'cyber-bat' sera disponible pour un temps limité !",
  	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
  	 	}
  	},
@@ -6208,16 +6208,16 @@
  	 	},
  	 	"instruction": {
  	 	 	"title": {
- 	 	 	 	"trans": "Comment se référer?",
+ 	 	 	 	"trans": "Comment se référer ?",
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
- 	 	 	 	"trans": "2. Fait, c'est tout!",
+ 	 	 	 	"trans": "2. Fait, c'est tout !",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
  	 	"footnote1": {
- 	 	 	"trans": "* Vous obtenez une unité bonus de 10% chaque fois que votre ami achète l'unité",
+ 	 	 	"trans": "* Vous obtenez un bonus en unités de 10% chaque fois que votre ami achète des unités",
  	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
  	 	},
  	 	"footnote2": {
@@ -6230,11 +6230,11 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Rapport ${playerName}",
+ 	 	 	"trans": "Signaler ${playerName}",
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Le rapport sera envoyé automatiquement aux modérateurs. \\ nVeuillez ne pas faire d'abus, de spamming ou jouer avec le système de rapport.",
+ 	 	 	"trans": "Le signalement sera envoyé automatiquement aux modérateurs. \\nVeuillez ne pas faire d'abus, de spamming ou jouer avec le système de signalement.",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
@@ -6249,11 +6249,11 @@
  	 	},
  	 	"error": {
  	 	 	"otherNoText": {
- 	 	 	 	"trans": "Le type de rapport «Autre» a besoin d'une description",
+ 	 	 	 	"trans": "Le type de signalement «Autre» a besoin d'une description",
  	 	 	 	"eng": "Report type of \"Other\" needs a description"
  	 	 	},
  	 	 	"noReportType": {
- 	 	 	 	"trans": "Vous devez sélectionner un type de rapport",
+ 	 	 	 	"trans": "Vous devez sélectionner un type de signalement",
  	 	 	 	"eng": "You need to select a report type"
  	 	 	}
  	 	}
