--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -2911,7 +2911,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"level"
  	 	 	 	],
- 	 	 	 	"trans": "${level}",
+ 	 	 	 	"trans": "${level} seviyeye ulaş",
  	 	 	 	"eng": "Reach level ${level}"
  	 	 	},
  	 	 	"description": {
