--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -1946,7 +1946,7 @@
  	 	 	 	"eng": "CyberCode Online is an online game, an account is needed to store game data."
  	 	 	},
  	 	 	"description2": {
- 	 	 	 	"trans": "يرجى تسجيل او التخول بحساب موجود,
+ 	 	 	 	"trans": "يرجى تسجيل او التخول بحساب موجود",
  	 	 	 	"eng": "please register or login with existing account"
  	 	 	},
  	 	 	"asusDescription": {
@@ -2068,7 +2068,7 @@
  	 	},
  	 	"register": {
  	 	 	"registerButton": {
- 	 	 	 	"trans": تسجيل حساب",
+ 	 	 	 	"trans": "تسجيل حساب",
  	 	 	 	"eng": "Create Account"
  	 	 	},
  	 	 	"loginPageButton": {
