--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -6238,7 +6238,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"search"
  	 	 	 	],
- 	 	 	 	"trans": "Žiadny hráč s menom „${search} nebol nájdený“"
+ 	 	 	 	"trans": "Žiadny hráč s menom „${search} nebol nájdený“",
  	 	 	 	"eng": "No player with named \"${search}\" found"
  	 	 	}
  	 	},
